# sunder

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
sunder/: __init__.py  agent.py  agent_types.py  chunking.py  constants.py  curator.py  extract.py  index.py  ingest.py  kg.py  llm.py  sentences.py  structure.py  types.py
tests/: test_agent.py  test_chunking.py  test_config.py  test_curator.py  test_extract.py  test_ingest.py  test_llm.py  test_search.py  test_sentences.py
