[project]
name = "sunderdoc"
version = "0.1.0"
description = "Document intelligence pipeline -- PDF to searchable knowledge"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=4.0",
    "sentence-transformers>=5.0",
    "faiss-cpu>=1.9",
    "numpy>=1.26",
]

[project.optional-dependencies]
graph = ["anthropic>=0.42"]
ollama = ["requests>=2.31"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sunder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
